--- a/collated/test/A0140023E.md
+++ b/collated/test/A0140023E.md
@@ -3,7 +3,6 @@
 ``` java
     @Test
     public void edit_invalidValues_failure() {
-        // TODO constraints for date-time fields are also checked in other tests as they are constrained differently
         commandBox.runCommand("edit 1 //comments");
         assertResultMessage(Name.MESSAGE_NAME_CONSTRAINTS);
 
@@ -83,7 +82,6 @@
 ```
 ###### /java/onlythree/imanager/logic/LogicManagerTest.java
 ``` java
-    // TODO maybe to take out these tests and put elsewhere
     @Test
     public void execute_add_invalidTaskData() {
         assertCommandFailure("add invalid name with slash/ from tmr to 2 days after",
@@ -103,7 +101,6 @@
 ```
 ###### /java/onlythree/imanager/logic/LogicManagerTest.java
 ``` java
-        // TODO should this be done in another way?
         // Starting Test Date Time is set to one day after today so that dates in the past is not
         // generated to prevent a PastDateTimeException from occuring. Furthermore the precision
         // is truncated to seconds as Natty does not parse milliseconds
@@ -247,12 +244,16 @@ public class AddCommandParserTest {
     }
 
     @Test
-    public void parse_withDeadlineAndStartEndDateTime_expectsException()
+    public void parse_withDeadlineAndStartEndDateTime_expectsCorrectTask()
             throws PastDateTimeException, IllegalValueException, CommandException, InvalidDurationException {
-        exception.expect(CommandException.class);
-        exception.expectMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
+        Name name = new Name("by tmr");
+        StartEndDateTime startEndDateTime =
+                new StartEndDateTime(ZonedDateTime.now().plusDays(3), ZonedDateTime.now().plusDays(7));
+        Task expectedTask = new Task(name, Optional.empty(), Optional.of(startEndDateTime), new UniqueTagList());
 
         parseAndExecute(" by tmr from 3 days after to 7 days after");
+
+        assertEqualsTaskIgnoreStartEndDateTimeSeconds(expectedTask, actualTask);
     }
 
     private void parseAndExecute(String args) throws CommandException {
@@ -1232,7 +1233,6 @@ public class TestDateTimeHelper {
 ``` java
     private static Task[] getSampleTaskData() {
         try {
-            // TODO maybe they should not be empty optionals
             return new Task[]{
                 new Task(new Name("Allocate Work"), Optional.empty(), Optional.empty(), new UniqueTagList()),
                 new Task(new Name("Buy Groceries"), Optional.empty(), Optional.empty(), new UniqueTagList()),
@@ -1265,9 +1265,9 @@ public class TestDateTimeHelper {
 ```
 ###### /java/onlythree/imanager/testutil/TypicalTestTasks.java
 ``` java
-    // TODO naming of tasks as names does not seem to be a good idea, and not descriptive enough
-    // for example helpMe and iAmCode are to be manually added in test cases but it is not clear
-    // conversely the name shows what the task contains, so it can be helpful
+    // Naming of tasks as names does not seem to be a good idea, and not descriptive enough
+    // for example helpMe and iAmCode are to be manually added in test cases but it is not clear.
+    // Conversely the name shows what the task contains, so it might be helpful
     public TestTask amuseFriend, bet, count, dog, elephant, flipTable, goondu, helpMe, iAmCode;
 
     public TypicalTestTasks() {
@@ -1297,7 +1297,6 @@ public class TestDateTimeHelper {
             goondu = new TaskBuilder().withName("Goondu goon").build();
 
             // Manually added
-            // TODO maybe to use non-floating tasks here
             helpMe = new TaskBuilder().withName("Help me").build();
             iAmCode = new TaskBuilder().withName("I am code").build();
         } catch (PastDateTimeException e) {
